--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,131 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Poppins:wght@300;400;500;600&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: 0;
+  list-style: none;
+  text-decoration: none;
+}
+
+html{
+  scroll-behavior: smooth;
+}
+
+:root{
+  --color-bg:#1f1f38;
+  --color-bg-variant:#2c2c6c;
+  --color-primary:#4db5ff;
+  --color-primary-variant:rgba(77,181,255,0.4);
+  --color-white:#fff;
+  --color-light:rgba(255,255,255,0.6);
+
+  --transition: all 400ms ease;
+
+  --container-width-lg:75%;
+  --container-width-md:86%;
+  --container-width-sm:90%; 
+}
+::-webkit-scrollbar{
+  display: none;
+}
+
+body{
+  font-family: 'Inter', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  background: var(--color-bg);
+  color:var(--color-white); 
+    /* background-color: #feca57; */
+    /* background-color: #feca57; */
+  background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ff9f43' fill-opacity='0.4' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
+  line-height: 1.7 ;  
+}
+.container{
+  width: var(--container-width-lg);
+  margin: 0 auto;
+}
+
+h1,h2,h3,h4,h5{
+  font-weight: 500;
+}
+
+h1{
+  font-size:2.5rem;
+}
+section{
+  margin-top: 8rem;
+}
+
+section >h2, section >h5{
   text-align: center;
+  color: var(--color-light);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+section >h2{
+  color:var(--color-primary);
+  margin-bottom: 3rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+text-light{
+  color:var(--color-light);
+}
+
+a{
+  color:var(--color-primary);
+  transition: all 400ms ease;
+
+}
+
+a:hover{
+  color:var(--color-white)
+}
+
+.btn{
+  width: max-content;
+  display: inline-block;
+  color: var(--color-primary);
+  padding: 0.75rem 1.2rem;
+  border-radius: 0.4rem;
+  cursor: pointer;
+  border: 1px solid var(--color-primary);
+  transition: var(--transition);
+}
+
+.btn:hover{
+  background: var(--color-white);
+  color: var(--color-bg);
+  border-color: transparent;
+}
+
+.btn-primary{
+  background:var(--color-primary);
+  color:var(--color-bg)
+}
+
+img{
+  display: block;
+  width: 100%;
+  object-fit: cover;
+}
+
+@media screen and (max-width:1024px) {
+  .container{
+    width: var(--container-width-md);
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  section{
+    margin-top: 6rem;
   }
-  to {
-    transform: rotate(360deg);
+
+}
+
+@media screen and (max-width:600px) {
+  .container {
+    width: var(--container-width-sm);
   }
+
+  section {
+    margin-top: 2rem;
+  }
+
 }
