--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 *{
   margin: 0;
   padding: 0;
+  border: 0;   
   box-sizing: border-box;
   outline: 0;
   list-style: none;
@@ -55,6 +56,7 @@ h1{
 }
 section{
   margin-top: 8rem;
+  height: 100vh;
 }
 
 section >h2, section >h5{
@@ -73,7 +75,7 @@ text-light{
 
 a{
   color:var(--color-primary);
-  transition: all 400ms ease;
+  transition: var(--transition)
 
 }
 
