--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -73,7 +73,7 @@
 
 }
 
-@media screen and (max-width:600px) {
+/* @media screen and (max-width:600px) {
     .about__me{
         width: 65%;
         margin: 0 auto 3rem;
@@ -87,5 +87,25 @@
     }
     .about__content p{
         margin:1.5rem 0 ; 
+    }
+} */
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 600px) {
+.about__me {
+        width: 65%;
+        margin: 0 auto 3rem;
+    }
+
+    .about__cards {
+        grid-template-columns: 1fr 1fr;
+        gap: 1rem
+    }
+
+    .about__content {
+        text-align: center;
+    }
+
+    .about__content p {
+        margin: 1.5rem 0;
     }
 }
