--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -54,7 +54,8 @@
     }
 }
 
-@media screen and (max-width:600px) {
+
+/* @media screen and (max-width:600px) {
     .experience__container{
         gap:1rem;
 
@@ -64,4 +65,16 @@
         padding: 2rem 1rem;
     }
 
+} */
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 600px)  {
+    .experience__container {
+            gap: 1rem;
+    
+        }
+    
+        .experience__container>div {
+            width: 100%;
+            padding: 2rem 1rem;
+        }
 }
