--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ h1{
 }
 section{
   margin-top: 8rem;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 section >h2, section >h5{
@@ -121,13 +121,35 @@ img{
 
 }
 
-@media screen and (max-width:600px) {
+/* @media screen and (max-width:600px) {
   .container {
-    width: var(--container-width-sm);
+    width: 90%;
   }
 
-  section {
+  section{
     margin-top: 2rem;
+    
   }
 
+} */
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 600px)  {
+    .container {
+        width: var(--container-width-sm);
+      }
+    
+      section {
+        margin-top: 2rem;
+    
+      }
 }
+
+/* @media screen and (max-width: 600px) {
+  .container {
+    width: 90%;
+    
+  }
+    section{
+      margin-top: 2rem;
+    }
+} */
