--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -60,9 +60,16 @@ input, textarea{
 
 }
 
-@media screen and (max-width:600px) {
+/* @media screen and (max-width:600px) {
     .container.contact__container{
-        /* grid-template-columns: 1fr; */
+        grid-template-columns: 1fr;
         width: var(--container-width-sm);
     }
+} */
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 600px) {
+    .container.contact__container {
+            grid-template-columns: 1fr;
+            width: var(--container-width-sm);
+        }
 }
