--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -38,9 +38,16 @@
     }
 }
 
-@media screen and (max-width:600px) {
+/* @media screen and (max-width:600px) {
     .portfolio__container{
         grid-template-columns: 1fr;
         gap:1rem
+    }
+} */
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 600px) {
+.portfolio__container {
+        grid-template-columns: 1fr;
+        gap: 1rem
     }
 }
