--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -70,9 +70,9 @@ header{
 } */
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 600px)  {
-    header {
+    /* header {
             height: 100vh;
-        }
+        } */
     
         .header_social,
         .scroll__down {
